--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 .Rhistory
 .RData
 .Ruserdata
-inst/extdata/easierData.rda
+inst/extdata/easier_internal.rda
 inst/extdata/Mariathasan2018_PDL1_treatment.rda
 
