--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,7 @@ biocViews:
 Depends: R (>= 4.1.0)
 Imports: 
     ExperimentHub,
+    AnnotationHub,
     utils,
     SummarizedExperiment
 Suggests: 
