fixing namespace and imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,6 @@ export(get_opt_xtrain_stats)
 export(get_scores_signature_genes)
 export(list_easierData)
 importFrom(AnnotationHub,query)
+importFrom(ExperimentHub,ExperimentHub)
+importFrom(SummarizedExperiment,SummarizedExperiment)
+importFrom(utils,data)
