--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,4 @@
 Package: easierData
-Type: Package
 Title: easier internal data and exemplary dataset from IMvigor210CoreBiologies package
 Version: 0.99.0
 Authors@R: 
@@ -48,6 +47,6 @@ biocViews:
     RNASeqData, ExperimentHub, ReproducibleResearch, ImmunoOncologyData, CancerData
 VignetteBuilder: knitr
 Encoding: UTF-8
-RoxygenNote: 7.1.2
-Config/testthat/edition: 3
+VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.2
