refined CITATION and test

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,7 +43,7 @@ Suggests:
     rmarkdown,
     BiocStyle,
     testthat (>= 3.0.0)
-biocViews: RNASeqData, ExperimentHub, ReproducibleResearch, ImmunoOncologyData, CancerData
+biocViews: RNASeqData, ExperimentHub, ReproducibleResearch, ImmunoOncologyData, CancerData, ExperimentData
 VignetteBuilder: knitr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
